# docs-as-code

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD  MODULE.bazel  README.md  docs.bzl  pyproject.toml  renovate.json  score_pytest.bzl  versions.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/instructions/: process_req.instructions.md
.github/workflows/: bzlmod-lock.yml  consumer_test.yml  copyright.yml  daily.yml  docs.yml  format.yml  license_check.yml  link_check.yml  lint.yml  renovate.yml  test.yml  test_and_docs.yml  test_links.yml
docs/: BUILD  conf.py  index.rst
docs/concepts/: bidirectional_traceability.rst  docs_deps.rst  index.rst
docs/docs-as-code/: getting_started.md  index.rst
docs/example/: index.rst
docs/faq/: index.rst
docs/how-to/: add_extensions.rst  any_folder.rst  faq.md  get_started.rst  index.rst  other_modules.rst  setup.md  source_to_doc_links.rst  test_to_doc_links.rst  write_docs.rst
docs/how-to-integrate/: getting_started.md  index.rst
docs/how-to-use/: faq.md  index.rst
docs/internals/: benchmark_results.md  index.rst
docs/product/: index.rst  requirements.rst
docs/reference/: bazel_macros.rst  commands.md  index.rst
docs/requirements/: index.rst  process_overview.rst  requirements.rst  test_overview.rst
examples/: README.md
examples/linking-both/: BUILD  index.rst
examples/linking-latest/: BUILD  conf.py  index.rst
examples/linking-release/: BUILD  index.rst
examples/simple/: BUILD  conf.py  index.rst
main/: genindex.html  index.html  needs.json  objects.inv  schema_violations.json  score_repo_grouped_scl_cache.json  score_scl_grouped_cache.json  score_source_code_linker_cache.json  score_testcaseneeds_cache.json  score_xml_parser_cache.json  search.html  searchindex.js
main/_sources/: index.rst.txt
main/concepts/: bidirectional_traceability.html  docs_deps.html  index.html
main/how-to/: add_extensions.html  any_folder.html  commands.html  faq.html  get_started.html  index.html  other_modules.html  setup.html  source_to_doc_links.html  test_to_doc_links.html  write_docs.html
main/how-to-integrate/: getting_started.html  index.html
main/how-to-use/: faq.html  index.html
main/internals/: benchmark_results.html  index.html
main/product/: capabilities.html  index.html  process_overview.html  requirements.html
main/reference/: bazel_macros.html  commands.html  index.html
main/requirements/: capabilities.html  index.html  process_overview.html  requirements.html  test_overview.html
pr-1/: needs.json  search.html  searchindex.js
pr-1/concepts/: bidirectional_traceability.html  index.html
pr-1/how-to/: get_started.html  setup.html  test_to_doc_links.html  write_docs.html
pr-1/reference/: commands.html
process-docs/: BUILD  conf.py
score_pytest/: BUILD  README.md  attribute_plugin.py  pytest.ini
scripts/: README.md  run-linters.sh
scripts_bazel/: BUILD  README.md  generate_sourcelinks_cli.py  merge_sourcelinks.py
scripts_bazel/tests/: BUILD  (+2 more)
src/: BUILD  README.md  incremental.py  requirements.in  requirements.txt  requirements_lock.txt
(+177 files in other folders)
