# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# Versioning is handled by GitHub Releases.
module(name = "score_docs_as_code")

###############################################################################
#
# Python version
#
###############################################################################
bazel_dep(name = "rules_python", version = "1.8.3")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

###############################################################################
#
# docs dependencies (Sphinx)
#
###############################################################################
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    envsubst = ["PIP_INDEX_URL"],
    extra_pip_args = ["--index-url=${PIP_INDEX_URL:-https://pypi.org/simple/}"],
    hub_name = "docs_as_code_hub_env",
    python_version = PYTHON_VERSION,
    requirements_lock = "//src:requirements.txt",
)
use_repo(pip, "docs_as_code_hub_env")

# Additional Python rules provided by aspect, e.g. an improved version of
bazel_dep(name = "aspect_rules_py", version = "1.4.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# PlantUML for docs
bazel_dep(name = "rules_java", version = "8.15.1")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "plantuml",
    sha256 = "6f38f70455d08438979451c2257cd5d58647c6460094bb829bc2a12878d47331",
    url = "https://github.com/plantuml/plantuml/releases/download/v1.2025.0/plantuml-1.2025.0.jar",
)

# Bazel LSP
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "starpls_prebuilt",
    sha256 = "45692ecb9d94a19a15b1e7b240acdff5702f78cd22188dac41e1879cb8bdcdcf",
    urls = ["https://github.com/withered-magic/starpls/releases/download/v0.1.21/starpls-linux-amd64"],
)

# Checker rule for CopyRight checks/fixes

# docs dependency
# Note: requirements were last aligned with 1.2.0,
# the switch to 1.3.1 is purely to drop the dependency on docs-as-code 1.x.
bazel_dep(name = "score_process", version = "1.5.1")
git_override(
    module_name = "score_process",
    commit = "4c3a16f03c2834b25a10f39542cbe81a8dec4e8a",
    remote = "https://github.com/eclipse-score/process_description.git",
)

# Add Linter
bazel_dep(name = "score_tooling", version = "1.2.0")
